include/Win64/Physics.ODEImport.hpp

struct TdxBody;
struct TdxWorld;
struct TdJointFeedback;
struct TdContact;
typedef float TdReal;
typedef TdxJointGroup *PdxJointGroup;
typedef PdxJointGroup TdJointGroupID;
typedef System::StaticArray<float, 4> TdVector3;
typedef TdxWorld *PdxWorld;
typedef TdxBody *PdxBody;
typedef TdxJoint *PdxJoint;
typedef PdxJoint TdJointID;
struct DECLSPEC_DRECORD TdxBody
{
public:
	TdObject baseObject;
	System::Byte Padding;
	TdxJoint *firstjoint;
	int flags;
	TdxGeom *geom;
	TdMass mass;
	TdMatrix3 invI;
	float invMass;
	TdxPosR posr;
	TdVector4 q;
	TdVector3 lvel;
	TdVector3 avel;
	TdVector3 facc;
	TdVector3 tacc;
	TdVector3 finite_rot_axis;
	TdxAutoDisable adis;
	float adis_timeleft;
	int adis_stepsleft;
	TdVector3 *average_lvel_buffer;
	TdVector3 *average_avel_buffer;
	unsigned average_counter;
	int average_ready;
	TdMovedCallback moved_callback;
	TdxDampingParameters dampingp;
	float max_angular_speed;
};
struct DECLSPEC_DRECORD TdxWorld
{
public:
	TdxBody *firstbody;
	TdxJoint *firstjoint;
	int nb;
	int nj;
	TdVector3 gravity;
	float global_erp;
	float global_cfm;
	TdxAutoDisable adis;
	int body_flags;
	TdxQuickStepParameters qs;
	TdxContactParameters contactp;
	TdxDampingParameters dampingp;
	float max_angular_speed;
};
struct DECLSPEC_DRECORD TdJointFeedback
{
public:
	TdVector3 f1;
	TdVector3 t1;
	TdVector3 f2;
	TdVector3 t2;
};
typedef TdJointFeedback *PTdJointFeedback;
struct DECLSPEC_DRECORD TdContact
{
public:
	TdSurfaceParameters surface;
	TdContactGeom geom;
	TdVector3 fdir1;
};
typedef TdContact *PdContact;
typedef int TJointParams;
//-- var, const, procedure ---------------------------------------------------
#define ODEDLL L"ode64s.dll"
extern "C" float __cdecl dBodyGetAutoDisableLinearThreshold(const PdxBody body);
extern "C" void __cdecl dBodySetAutoDisableLinearThreshold(const PdxBody body, float linThreshold);
extern "C" float __cdecl dBodyGetAutoDisableAngularThreshold(const PdxBody body);
extern "C" void __cdecl dBodySetAutoDisableAngularThreshold(const PdxBody body, float angThreshold);
extern "C" int __cdecl dBodyGetAutoDisableSteps(const PdxBody body);
extern "C" void __cdecl dBodySetAutoDisableSteps(const PdxBody body, int steps);
extern "C" float __cdecl dBodyGetAutoDisableTime(const PdxBody body);
extern "C" void __cdecl dBodySetAutoDisableTime(const PdxBody body, float time);
extern "C" int __cdecl dBodyGetAutoDisableFlag(const PdxBody body);
extern "C" void __cdecl dBodySetAutoDisableFlag(const PdxBody body, int do_auto_disable);
extern "C" void __cdecl dBodySetAutoDisableDefaults(const PdxBody body);
extern "C" void __cdecl dBodySetAutoDisableAverageSamplesCount(const PdxBody body, unsigned average_samples_count);
extern "C" void __cdecl dJointGroupDestroy(const PdxJointGroup dJointGroupID);
extern "C" PdxJointGroup __cdecl dJointGroupCreate(const int max_size);
extern "C" void __cdecl dJointGroupEmpty(const PdxJointGroup dJointGroupID);
extern "C" void __cdecl dJointAttach(const PdxJoint dJointID, const PdxBody body1, const PdxBody body2);
extern "C" void __cdecl dJointDestroy(const PdxJoint dJointID);
extern "C" void * __cdecl dJointGetData(const PdxJoint dJointID);
extern "C" void __cdecl dJointSetData(const PdxJoint dJointID, void * data);
extern "C" void __cdecl dJointSetFeedback(const PdxJoint dJointID, PTdJointFeedback Feedback);
extern "C" PTdJointFeedback __cdecl dJointGetFeedback(const PdxJoint dJointID);
extern "C" int __cdecl dJointGetType(const PdxJoint dJointID);
extern "C" PdxBody __cdecl dJointGetBody(const PdxJoint dJointID, const int index);
extern "C" PdxJoint __cdecl dJointCreateContact(const PdxWorld World, PdxJointGroup dJointGroupID, const PdContact dContact);
extern "C" PdxJoint __cdecl dJointCreateAMotor(const PdxWorld World, PdxJointGroup dJointGroupID);
extern "C" void __cdecl dJointSetAMotorAngle(const PdxJoint dJointID, const int anum, const float angle);
extern "C" float __cdecl dJointGetAMotorAngle(const PdxJoint dJointID, const int anum);
extern "C" void __cdecl dJointSetAMotorAxis(const PdxJoint dJointID, const int anum, const int rel, const float x, const float y, const float z);
extern "C" void __cdecl dJointGetAMotorAxis(const PdxJoint dJointID, const int anum, TdVector3 &result);
extern "C" void __cdecl dJointSetAMotorNumAxes(const PdxJoint dJointID, const int num);
extern "C" int __cdecl dJointGetAMotorNumAxes(const PdxJoint dJointID);
extern "C" void __cdecl dJointSetAMotorParam(const PdxJoint dJointID, const int parameter, const float Value);
extern "C" float __cdecl dJointGetAMotorParam(const PdxJoint dJointID, const int parameter);
extern "C" void __cdecl dJointSetAMotorMode(const PdxJoint dJointID, const TdAngularMotorModeNumbers mode);
extern "C" int __cdecl dJointGetAMotorMode(const PdxJoint dJointID);
extern "C" void __cdecl dJointAddAMotorTorques(const PdxJoint dJointID, float torque1, float torque2, float torque3);
extern "C" float __cdecl dJointGetAMotorAngleRate(const PdxJoint dJointID, const int anum);
extern "C" int __cdecl dJointGetAMotorAxisRel(const PdxJoint dJointID, const int anum);
extern "C" PdxJoint __cdecl dJointCreateLMotor(const PdxWorld World, PdxJointGroup dJointGroupID);
extern "C" void __cdecl dJointSetLMotorAxis(const PdxJoint dJointID, const int anum, const int rel, const float x, const float y, const float z);
extern "C" void __cdecl dJointGetLMotorAxis(const PdxJoint dJointID, const int anum, TdVector3 &result);
extern "C" void __cdecl dJointSetLMotorNumAxes(const PdxJoint dJointID, const int num);
extern "C" int __cdecl dJointGetLMotorNumAxes(const PdxJoint dJointID);
extern "C" void __cdecl dJointSetLMotorParam(const PdxJoint dJointID, const int parameter, const float Value);
extern "C" float __cdecl dJointGetLMotorParam(const PdxJoint dJointID, const int parameter);
extern "C" PdxJoint __cdecl dJointCreateBall(const PdxWorld World, PdxJointGroup dJointGroupID);
extern "C" void __cdecl dJointSetBallAnchor(const PdxJoint dJointID, const float x, const float y, const float z);
extern "C" void __cdecl dJointGetBallAnchor(const PdxJoint dJointID, TdVector3 &result);
extern "C" void __cdecl dJointGetBallAnchor2(const PdxJoint dJointID, TdVector3 &result);
extern "C" PdxJoint __cdecl dJointCreateHinge(const PdxWorld World, PdxJointGroup dJointGroupID);
extern "C" void __cdecl dJointSetHingeAnchor(const PdxJoint dJointID, const float x, const float y, const float z);
extern "C" void __cdecl dJointGetHingeAnchor(const PdxJoint dJointID, TdVector3 &result);
extern "C" void __cdecl dJointGetHingeAnchor2(const PdxJoint dJointID, TdVector3 &result);
extern "C" void __cdecl dJointSetHingeAxis(const PdxJoint dJointID, const float x, const float y, const float z);
extern "C" void __cdecl dJointGetHingeAxis(const PdxJoint dJointID, TdVector3 &result);
extern "C" void __cdecl dJointSetHingeParam(const PdxJoint dJointID, const int parameter, const float Value);
extern "C" float __cdecl dJointGetHingeParam(const PdxJoint dJointID, const int parameter);
extern "C" float __cdecl dJointGetHingeAngle(const PdxJoint dJointID);
extern "C" float __cdecl dJointGetHingeAngleRate(const PdxJoint dJointID);
extern "C" void __cdecl dJointAddHingeTorque(const PdxJoint dJointID, float torque);
extern "C" PdxJoint __cdecl dJointCreateHinge2(const PdxWorld World, PdxJointGroup dJointGroupID);
extern "C" void __cdecl dJointSetHinge2Anchor(const PdxJoint dJointID, const float x, const float y, const float z);
extern "C" void __cdecl dJointGetHinge2Anchor(const PdxJoint dJointID, TdVector3 &result);
extern "C" void __cdecl dJointGetHinge2Anchor2(const PdxJoint dJointID, TdVector3 &result);
extern "C" void __cdecl dJointSetHinge2Axis1(const PdxJoint dJointID, const float x, const float y, const float z);
extern "C" void __cdecl dJointGetHinge2Axis1(const PdxJoint dJointID, TdVector3 &result);
extern "C" void __cdecl dJointSetHinge2Axis2(const PdxJoint dJointID, const float x, const float y, const float z);
extern "C" void __cdecl dJointGetHinge2Axis2(const PdxJoint dJointID, TdVector3 &result);
extern "C" void __cdecl dJointSetHinge2Param(const PdxJoint dJointID, const int parameter, const float Value);
extern "C" float __cdecl dJointGetHinge2Param(const PdxJoint dJointID, const int parameter);
extern "C" float __cdecl dJointGetHinge2Angle1(const PdxJoint dJointID);
extern "C" float __cdecl dJointGetHinge2Angle1Rate(const PdxJoint dJointID);
extern "C" float __cdecl dJointGetHinge2Angle2Rate(const PdxJoint dJointID);
extern "C" void __cdecl dJointAddHinge2Torques(const PdxJoint dJointID, float torque1, float torque2);
extern "C" void __cdecl dJointCorrectHinge2(const PdxJoint dJointID);
extern "C" PdxJoint __cdecl dJointCreateSlider(const PdxWorld World, PdxJointGroup dJointGroupID);
extern "C" void __cdecl dJointSetSliderAxis(const PdxJoint dJointID, const float x, const float y, const float z);
extern "C" void __cdecl dJointGetSliderAxis(const PdxJoint dJointID, TdVector3 &result);
extern "C" void __cdecl dJointSetSliderParam(const PdxJoint dJointID, const int parameter, const float Value);
extern "C" float __cdecl dJointGetSliderParam(const PdxJoint dJointID, const int parameter);
extern "C" float __cdecl dJointGetSliderPosition(const PdxJoint dJointID);
extern "C" float __cdecl dJointGetSliderPositionRate(const PdxJoint dJointID);
extern "C" void __cdecl dJointAddSliderForce(const PdxJoint dJointID, float force);
extern "C" PdxJoint __cdecl dJointCreateUniversal(const PdxWorld World, PdxJointGroup dJointGroupID);
extern "C" void __cdecl dJointGetUniversalAnchor(const PdxJoint dJointID, TdVector3 &result);
extern "C" void __cdecl dJointGetUniversalAnchor2(const PdxJoint dJointID, TdVector3 &result);
extern "C" void __cdecl dJointSetUniversalAxis1(const PdxJoint dJointID, const float x, const float y, const float z);
extern "C" void __cdecl dJointGetUniversalAxis1(const PdxJoint dJointID, TdVector3 &result);
extern "C" void __cdecl dJointSetUniversalAxis2(const PdxJoint dJointID, const float x, const float y, const float z);
extern "C" void __cdecl dJointGetUniversalAxis2(const PdxJoint dJointID, TdVector3 &result);
extern "C" void __cdecl dJointSetUniversalParam(const PdxJoint dJointID, const int parameter, const float Value);
extern "C" float __cdecl dJointGetUniversalParam(const PdxJoint dJointID, const int parameter);
extern "C" float __cdecl dJointGetUniversalAngle1(const PdxJoint dJointID);
extern "C" float __cdecl dJointGetUniversalAngle2(const PdxJoint dJointID);
extern "C" float __cdecl dJointGetUniversalAngle1Rate(const PdxJoint dJointID);
extern "C" float __cdecl dJointGetUniversalAngle2Rate(const PdxJoint dJointID);
extern "C" void __cdecl dJointSetUniversalAnchor(const PdxJoint dJointID, const float x, const float y, const float z);
extern "C" void __cdecl dJointAddUniversalTorques(const PdxJoint dJointID, float torque1, float torque2);