Source/Physics.ODEImport.pas


// Auto-disable functions
function dBodyGetAutoDisableLinearThreshold(const body: PdxBody): TdReal; cdecl;
  external ODEDLL;
procedure dBodySetAutoDisableLinearThreshold(const body: PdxBody;
  linThreshold: TdReal); cdecl; external ODEDLL;
function dBodyGetAutoDisableAngularThreshold(const body: PdxBody): TdReal;
  cdecl; external ODEDLL;
procedure dBodySetAutoDisableAngularThreshold(const body: PdxBody;
  angThreshold: TdReal); cdecl; external ODEDLL;
function dBodyGetAutoDisableSteps(const body: PdxBody): Integer; cdecl;
  external ODEDLL;
procedure dBodySetAutoDisableSteps(const body: PdxBody; steps: Integer); cdecl;
  external ODEDLL;
function dBodyGetAutoDisableTime(const body: PdxBody): TdReal; cdecl;
  external ODEDLL;
procedure dBodySetAutoDisableTime(const body: PdxBody; time: TdReal); cdecl;
  external ODEDLL;
function dBodyGetAutoDisableFlag(const body: PdxBody): Integer; cdecl;
  external ODEDLL;
procedure dBodySetAutoDisableFlag(const body: PdxBody;
  do_auto_disable: Integer); cdecl; external ODEDLL;
procedure dBodySetAutoDisableDefaults(const body: PdxBody); cdecl;
  external ODEDLL;
procedure dBodySetAutoDisableAverageSamplesCount(const body: PdxBody;
  average_samples_count: longword); cdecl; external ODEDLL;


// ----- dJoint -----
{$IFDEF PARODE}
// breakable joints
procedure dJointSetBreakable(const dJointID: TdJointID; b: Integer); cdecl;
  external ODEDLL;
procedure dJointSetBreakCallback(const dJointID: TdJointID;
  callbackFunc: TdJointBreakCallback); cdecl; external ODEDLL;
procedure dJointSetBreakMode(const dJointID: TdJointID; mode: Integer); cdecl;
  external ODEDLL;
function dJointGetBreakMode(const dJointID: TdJointID): Integer; cdecl;
  external ODEDLL;
procedure dJointSetBreakForce(const dJointID: TdJointID; body: Integer;
  x, y, z: TdReal); cdecl; external ODEDLL;
procedure dJointSetBreakTorque(const dJointID: TdJointID; body: Integer;
  x, y, z: TdReal); cdecl; external ODEDLL;
function dJointIsBreakable(const dJointID: TdJointID): Integer; cdecl;
  external ODEDLL;
procedure dJointGetBreakForce(const dJointID: TdJointID; body: Integer;
  var force: TdVector3); cdecl; external ODEDLL;
procedure dJointGetBreakTorque(const dJointID: TdJointID; body: Integer;
  var torque: TdVector3); cdecl; external ODEDLL;
{$ENDIF}
// normal joints
procedure dJointGroupDestroy(const dJointGroupID: TdJointGroupID); cdecl;
  external ODEDLL;
function dJointGroupCreate(const max_size: Integer): TdJointGroupID; cdecl;
  external ODEDLL;
procedure dJointGroupEmpty(const dJointGroupID: TdJointGroupID); cdecl;
  external ODEDLL;

procedure dJointAttach(const dJointID: TdJointID; const body1, body2: PdxBody);
  cdecl; external ODEDLL;
procedure dJointDestroy(const dJointID: TdJointID); cdecl; external ODEDLL;

function dJointGetData(const dJointID: TdJointID): pointer; cdecl;
  external ODEDLL;
procedure dJointSetData(const dJointID: TdJointID; data: pointer); cdecl;
  external ODEDLL;

// callback routines for feedback of joints
procedure dJointSetFeedback(const dJointID: TdJointID;
  Feedback: PTdJointFeedback); cdecl; external ODEDLL;
function dJointGetFeedback(const dJointID: TdJointID): PTdJointFeedback; cdecl;
  external ODEDLL;

function dJointGetType(const dJointID: TdJointID): Integer; cdecl;
  external ODEDLL;
function dJointGetBody(const dJointID: TdJointID; const index: Integer)
  : PdxBody; cdecl; external ODEDLL;

// Contact
function dJointCreateContact(const World: PdxWorld;
  dJointGroupID: TdJointGroupID; const dContact: PdContact): TdJointID; cdecl;
  external ODEDLL;

// AMotor
function dJointCreateAMotor(const World: PdxWorld;
  dJointGroupID: TdJointGroupID): TdJointID; cdecl; external ODEDLL;
procedure dJointSetAMotorAngle(const dJointID: TdJointID; const anum: Integer;
  const angle: TdReal); cdecl; external ODEDLL;
function dJointGetAMotorAngle(const dJointID: TdJointID; const anum: Integer)
  : TdReal; cdecl; external ODEDLL;
procedure dJointSetAMotorAxis(const dJointID: TdJointID;
  const anum, rel: Integer; const x, y, z: TdReal); cdecl; external ODEDLL;
procedure dJointGetAMotorAxis(const dJointID: TdJointID; const anum: Integer;
  var result: TdVector3); cdecl; external ODEDLL;
procedure dJointSetAMotorNumAxes(const dJointID: TdJointID; const num: Integer);
  cdecl; external ODEDLL;
function dJointGetAMotorNumAxes(const dJointID: TdJointID): Integer; cdecl;
  external ODEDLL;
procedure dJointSetAMotorParam(const dJointID: TdJointID;
  const parameter: TJointParams; const Value: TdReal); cdecl; external ODEDLL;
function dJointGetAMotorParam(const dJointID: TdJointID;
  const parameter: TJointParams): TdReal; cdecl; external ODEDLL;
procedure dJointSetAMotorMode(const dJointID: TdJointID;
  const mode: TdAngularMotorModeNumbers); cdecl; external ODEDLL;
function dJointGetAMotorMode(const dJointID: TdJointID): Integer; cdecl;
  external ODEDLL;
procedure dJointAddAMotorTorques(const dJointID: TdJointID;
  torque1, torque2, torque3: TdReal); cdecl; external ODEDLL;
function dJointGetAMotorAngleRate(const dJointID: TdJointID;
  const anum: Integer): TdReal; cdecl; external ODEDLL;
function dJointGetAMotorAxisRel(const dJointID: TdJointID; const anum: Integer)
  : Integer; cdecl; external ODEDLL;

// LMotor
function dJointCreateLMotor(const World: PdxWorld;
  dJointGroupID: TdJointGroupID): TdJointID; cdecl; external ODEDLL;
procedure dJointSetLMotorAxis(const dJointID: TdJointID;
  const anum, rel: Integer; const x, y, z: TdReal); cdecl; external ODEDLL;
procedure dJointGetLMotorAxis(const dJointID: TdJointID; const anum: Integer;
  var result: TdVector3); cdecl; external ODEDLL;
procedure dJointSetLMotorNumAxes(const dJointID: TdJointID; const num: Integer);
  cdecl; external ODEDLL;
function dJointGetLMotorNumAxes(const dJointID: TdJointID): Integer; cdecl;
  external ODEDLL;
procedure dJointSetLMotorParam(const dJointID: TdJointID;
  const parameter: TJointParams; const Value: TdReal); cdecl; external ODEDLL;
function dJointGetLMotorParam(const dJointID: TdJointID;
  const parameter: TJointParams): TdReal; cdecl; external ODEDLL;

// Ball
function dJointCreateBall(const World: PdxWorld; dJointGroupID: TdJointGroupID)
  : TdJointID; cdecl; external ODEDLL;
procedure dJointSetBallAnchor(const dJointID: TdJointID; const x, y, z: TdReal);
  cdecl; external ODEDLL;
procedure dJointGetBallAnchor(const dJointID: TdJointID; var result: TdVector3);
  cdecl; external ODEDLL;
procedure dJointGetBallAnchor2(const dJointID: TdJointID;
  var result: TdVector3); cdecl; external ODEDLL;

// Hinge
function dJointCreateHinge(const World: PdxWorld; dJointGroupID: TdJointGroupID)
  : TdJointID; cdecl; external ODEDLL;
procedure dJointSetHingeAnchor(const dJointID: TdJointID;
  const x, y, z: TdReal); cdecl; external ODEDLL;
procedure dJointGetHingeAnchor(const dJointID: TdJointID;
  var result: TdVector3); cdecl; external ODEDLL;
procedure dJointGetHingeAnchor2(const dJointID: TdJointID;
  var result: TdVector3); cdecl; external ODEDLL;
procedure dJointSetHingeAxis(const dJointID: TdJointID; const x, y, z: TdReal);
  cdecl; external ODEDLL;
procedure dJointGetHingeAxis(const dJointID: TdJointID; var result: TdVector3);
  cdecl; external ODEDLL;
procedure dJointSetHingeParam(const dJointID: TdJointID;
  const parameter: TJointParams; const Value: TdReal); cdecl; external ODEDLL;
function dJointGetHingeParam(const dJointID: TdJointID;
  const parameter: TJointParams): TdReal; cdecl; external ODEDLL;
function dJointGetHingeAngle(const dJointID: TdJointID): TdReal; cdecl;
  external ODEDLL;
function dJointGetHingeAngleRate(const dJointID: TdJointID): TdReal; cdecl;
  external ODEDLL;
procedure dJointAddHingeTorque(const dJointID: TdJointID; torque: TdReal);
  cdecl; external ODEDLL;

// Hinge2
function dJointCreateHinge2(const World: PdxWorld;
  dJointGroupID: TdJointGroupID): TdJointID; cdecl; external ODEDLL;
procedure dJointSetHinge2Anchor(const dJointID: TdJointID;
  const x, y, z: TdReal); cdecl; external ODEDLL;
procedure dJointGetHinge2Anchor(const dJointID: TdJointID;
  var result: TdVector3); cdecl; external ODEDLL;
procedure dJointGetHinge2Anchor2(const dJointID: TdJointID;
  var result: TdVector3); cdecl; external ODEDLL;
procedure dJointSetHinge2Axis1(const dJointID: TdJointID;
  const x, y, z: TdReal); cdecl; external ODEDLL;
procedure dJointGetHinge2Axis1(const dJointID: TdJointID;
  var result: TdVector3); cdecl; external ODEDLL;
procedure dJointSetHinge2Axis2(const dJointID: TdJointID;
  const x, y, z: TdReal); cdecl; external ODEDLL;
procedure dJointGetHinge2Axis2(const dJointID: TdJointID;
  var result: TdVector3); cdecl; external ODEDLL;
procedure dJointSetHinge2Param(const dJointID: TdJointID;
  const parameter: TJointParams; const Value: TdReal); cdecl; external ODEDLL;
function dJointGetHinge2Param(const dJointID: TdJointID;
  const parameter: TJointParams): TdReal; cdecl; external ODEDLL;
function dJointGetHinge2Angle1(const dJointID: TdJointID): TdReal; cdecl;
  external ODEDLL;
function dJointGetHinge2Angle1Rate(const dJointID: TdJointID): TdReal; cdecl;
  external ODEDLL;
function dJointGetHinge2Angle2Rate(const dJointID: TdJointID): TdReal; cdecl;
  external ODEDLL;
procedure dJointAddHinge2Torques(const dJointID: TdJointID;
  torque1, torque2: TdReal); cdecl; external ODEDLL;
procedure dJointCorrectHinge2(const dJointID: TdJointID); cdecl;
  external ODEDLL;

// Slider
function dJointCreateSlider(const World: PdxWorld;
  dJointGroupID: TdJointGroupID): TdJointID; cdecl; external ODEDLL;
procedure dJointSetSliderAxis(const dJointID: TdJointID; const x, y, z: TdReal);
  cdecl; external ODEDLL;
procedure dJointGetSliderAxis(const dJointID: TdJointID; var result: TdVector3);
  cdecl; external ODEDLL;
procedure dJointSetSliderParam(const dJointID: TdJointID;
  const parameter: TJointParams; const Value: TdReal); cdecl; external ODEDLL;
function dJointGetSliderParam(const dJointID: TdJointID;
  const parameter: TJointParams): TdReal; cdecl; external ODEDLL;
function dJointGetSliderPosition(const dJointID: TdJointID): TdReal; cdecl;
  external ODEDLL;
function dJointGetSliderPositionRate(const dJointID: TdJointID): TdReal; cdecl;
  external ODEDLL;
procedure dJointAddSliderForce(const dJointID: TdJointID; force: TdReal); cdecl;
  external ODEDLL;

// Universal
function dJointCreateUniversal(const World: PdxWorld;
  dJointGroupID: TdJointGroupID): TdJointID; cdecl; external ODEDLL;
procedure dJointGetUniversalAnchor(const dJointID: TdJointID;
  var result: TdVector3); cdecl; external ODEDLL;
procedure dJointGetUniversalAnchor2(const dJointID: TdJointID;
  var result: TdVector3); cdecl; external ODEDLL;
procedure dJointSetUniversalAxis1(const dJointID: TdJointID;
  const x, y, z: TdReal); cdecl; external ODEDLL;
procedure dJointGetUniversalAxis1(const dJointID: TdJointID;
  var result: TdVector3); cdecl; external ODEDLL;
procedure dJointSetUniversalAxis2(const dJointID: TdJointID;
  const x, y, z: TdReal); cdecl; external ODEDLL;
procedure dJointGetUniversalAxis2(const dJointID: TdJointID;
  var result: TdVector3); cdecl; external ODEDLL;
procedure dJointSetUniversalParam(const dJointID: TdJointID;
  const parameter: TJointParams; const Value: TdReal); cdecl; external ODEDLL;
function dJointGetUniversalParam(const dJointID: TdJointID;
  const parameter: TJointParams): TdReal; cdecl; external ODEDLL;
function dJointGetUniversalAngle1(const dJointID: TdJointID): TdReal; cdecl;
  external ODEDLL;
function dJointGetUniversalAngle2(const dJointID: TdJointID): TdReal; cdecl;
  external ODEDLL;
function dJointGetUniversalAngle1Rate(const dJointID: TdJointID): TdReal; cdecl;
  external ODEDLL;
function dJointGetUniversalAngle2Rate(const dJointID: TdJointID): TdReal; cdecl;
  external ODEDLL;
procedure dJointSetUniversalAnchor(const dJointID: TdJointID;
  const x, y, z: TdReal); cdecl; external ODEDLL;
procedure dJointAddUniversalTorques(const dJointID: TdJointID;
  torque1, torque2: TdReal); cdecl; external ODEDLL;
